--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^10.5.2",
+    "prettier": "^1.13.7",
+    "ts-lint": "^4.5.1",
+    "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8"
