--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "file-structure-validator",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://rolfisub@github.com/rolfisub/file-structure-validator.git",
+  "main": "dist/fsv.js",
+  "repository": "https://github.com/rolfisub/file-structure-validator.git",
   "author": "Rolf Bansbach <rolfbans@gmail.com",
   "license": "MIT",
+  "scripts": {
+    "build":"node webpack --config=webpack.config.js"
+  },
   "devDependencies": {
     "@types/node": "^10.5.2",
     "prettier": "^1.13.7",
