--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,9 @@
     "outDir": "./dist/",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": ["es6"],
     "sourceMap": true,
     "allowJs": true,
-    "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "./src",
     "forceConsistentCasingInFileNames": true,
