--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "author": "Rolf Bansbach <rolfbans@gmail.com",
   "license": "MIT",
   "scripts": {
-    "build":"node webpack --config=webpack.config.js"
+    "build": "node webpack --config=webpack.config.js"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.2",
+    "chai": "^4.1.2",
+    "dts-bundle-webpack": "^1.0.0",
+    "mocha": "^5.2.0",
     "prettier": "^1.13.7",
     "ts-lint": "^4.5.1",
     "ts-loader": "^4.4.2",
