--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Rolf Bansbach <rolfbans@gmail.com",
   "license": "MIT",
   "scripts": {
-    "build": "node webpack --config=webpack.config.js"
+    "build": "webpack --config=webpack.config.js",
+    "test": "mocha --require ts-node/register \"src/tests/**/*.ts\""
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
@@ -18,6 +19,7 @@
     "prettier": "^1.13.7",
     "ts-lint": "^4.5.1",
     "ts-loader": "^4.4.2",
+    "ts-node": "^7.0.0",
     "typescript": "^2.9.2",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8"
