--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "file-structure-validator",
   "version": "1.0.0",
-  "main": "dist/fsv.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/rolfisub/file-structure-validator.git",
   "author": "Rolf Bansbach <rolfbans@gmail.com",
   "license": "MIT",
@@ -14,7 +14,6 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.2",
     "chai": "^4.1.2",
-    "dts-bundle-webpack": "^1.0.0",
     "mocha": "^5.2.0",
     "prettier": "^1.13.7",
     "ts-lint": "^4.5.1",
